Remove Apicurio test resource and simplify consumer setup for integration tests.  Tests are working now but we need to reduce the configuration for the tests and use more of the apicurio extension features.